fix fonts and scrollbar

--- a/public/css/sobre.css
+++ b/public/css/sobre.css
@@ -55,7 +55,7 @@ header ul li a{
 
 .homepage {
     position: relative;
-    margin-top: 20px;
+    margin-top: 10%;
     width: 100%;
     display: grid;
     justify-content: normal;
@@ -127,3 +127,17 @@ header ul li a{
     text-decoration: none;
     color:#ffff;
 }
+
+body::-webkit-scrollbar {
+    width: 12px;               /* width of the entire scrollbar */
+  }
+  
+  body::-webkit-scrollbar-track {
+    background: #044bc3;        /* color of the tracking area */
+  }
+  
+  body::-webkit-scrollbar-thumb {
+    background-color: #dddd;    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    border: 3px solid #044bc3;  /* creates padding around scroll thumb */
+  }
